# OpenCV_learn

./: CMakeLists.txt  OpenCV_learn.cpp  README.md
src/: CameraAndVideo.cpp  DeepNeuralNetworks.cpp  DeepNeuralNetworks.h  ErodingDilating.cpp  ErodingDilating.h  Lesson1AboutMat.cpp  Lesson1AboutMat.h  Lesson2OperationsImages.cpp  Lesson2OperationsImages.h  Lesson3DrawAndText.cpp  Lesson3DrawAndText.h  Lesson4FliterSmoothingImages.cpp  Lesson4FliterSmoothingImages.h  LessonA2FeaturesFramework.cpp  LessonA2FeaturesFramework.h  LessonAFeaturesFramework.cpp  LessonAFeaturesFramework.h  MyUtils.cpp  MyUtils.h  TemplateMatching.cpp  TemplateMatching.h  Tracker.cpp  Tracker.h  ZoomInOut.cpp  ZoomInOut.h
